--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -19,10 +19,8 @@ const {
 
 <CardLayout title={`Heff Labs - ${title}`}>
   <div slot="title" class="flex flex-row items-center gap-6 flex-wrap">
-    <a href="/projects">
-      <Button>
-        <Back />
-      </Button>
+    <a href="/projects" class="btn">
+      <Back />
     </a>
     <ProjectImage>
       <img src={image} />
