--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import IconLabel from "../components/IconLabel.astro";
 import Person from "../icons/person.astro";
 import Mail from "../icons/mail.astro";
 import Hefflabs from "../icons/hefflabs.astro";
-import Preferences from "../components/Preferences.svelte";
+import Preferences from "../components/preferences.svelte";
 ---
 
 <CardLayout title="Heff Labs">
