--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,5 +1,5 @@
 ---
-import ChevronRight from "../icons/ChevronRight.svelte";
+import ChevronRight from "../icons/chevron-right.svelte";
 import type { ProjectFrontMatter } from "../types";
 import ProjectImage from "./ProjectImage.astro";
 
