--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,10 +25,9 @@ import Location from "../icons/location.astro";
   <Labeled label={"Accepting work status"} slot="bottom-end">
     <IconLabel>
       <div
-        class="h-2 w-2 bg-gold rounded-lg overflow-visible relative"
-        slot="icon"
-      >
-        <div class="ping bg-gold absolute w-full h-full rounded-lg"></div>
+        class="relative h-2 w-2 overflow-visible rounded-lg bg-gold"
+        slot="icon">
+        <div class="ping absolute h-full w-full rounded-lg bg-gold"></div>
       </div>
        Selective, inquire if interested
     </IconLabel>
