--- a/src/components/IconLabel.astro
+++ b/src/components/IconLabel.astro
@@ -1,4 +1,4 @@
-<div class="flex flex-row gap-3 items-center">
+<div class="flex flex-row items-center gap-3">
   <slot name="icon" />
   <span class="font-medium leading-6">
     <slot />
