--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -11,17 +11,16 @@ const { title, type, image, description, path } = Astro.props;
 ---
 
 <a
-  class="border-glass hover:border-glass-hover border-2 rounded-xl p-3 flex flex-row justify-between items-center cursor-pointer"
-  href={path}
->
-  <div class="flex flex-row gap-3 items-center">
+  class="flex cursor-pointer flex-row items-center justify-between rounded-xl border-2 border-glass p-3 hover:border-glass-hover"
+  href={path}>
+  <div class="flex flex-row items-center gap-3">
     <div class="p-1">
       <ProjectImage>
         <img src={image} />
       </ProjectImage>
     </div>
     <div>
-      <div class="text-lg font-semibold leading-6 mb-1">{title}</div>
+      <div class="mb-1 text-lg font-semibold leading-6">{title}</div>
       <span>{type.toString()} • {description}</span>
     </div>
   </div>
