--- a/src/components/ProjectImage.astro
+++ b/src/components/ProjectImage.astro
@@ -1,3 +1,3 @@
-<div class="h-10 w-10 rounded-lg bg-gray overflow-hidden">
-    <slot />
+<div class="h-10 w-10 overflow-hidden rounded-lg bg-gray">
+  <slot />
 </div>
