--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -17,7 +17,7 @@ const {
 ---
 
 <CardLayout title={`Heff Labs - ${title}`}>
-  <div slot="title" class="flex flex-row items-center gap-6 flex-wrap">
+  <div slot="title" class="flex flex-row flex-wrap items-center gap-6">
     <a href="/projects" class="btn">
       <Back />
     </a>
@@ -27,7 +27,7 @@ const {
     <h1 class="text-2xl font-bold">{title}</h1>
   </div>
   <slot />
-  <div slot="bottom-start" class="flex flex-row gap-3 flex-wrap">
+  <div slot="bottom-start" class="flex flex-row flex-wrap gap-3">
     {
       links.map((link) => (
         <a href={link.href} class="btn">
